[package]
name = "eden-world-editor"
version = "0.9.0"
description = "Eden world file editor"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "eden_world_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.1"
base64 = "0.22"
memmap2 = "0.9"
flate2 = "1"
zip = "2"
reqwest = { version = "0.12", features = ["multipart"] }
image = { version = "0.25", default-features = false, features = ["png"] }

